## -*- Makefile.am -*-
## Process this file with automake to produce Makefile.in
##
# C Ratfor: a ratfor preprocessor written in C.
# Makefile for the tests/ subdirectory.

EXTRA_DIST = README

# Unit tests should be run first.  Also, leave `blackbox' before
# `graybox', as some graybox tests require files from blackbox
# which are build at make time.
SUBDIRS = unit t graybox

## vim: ft=automake noet sw=4 ts=4
