## -*- Makefile.am -*-
## Copyright (C) 2009, 2010 Stefano Lattarini.
## Written by Stefano Lattarini <stefano.lattarini@gmail.com>
## This file is part of the Ratfor Testsuite.
## Process this file with automake to produce Makefile.in
##
# Makefile for the auxiliary files used in tests cases of the Ratfor
# Testsuite.

nodist_check_SCRIPTS = timer

dist_check_DATA = \
  testlib.sh \
  rat4-testlib.sh

nodist_check_DATA = \
  rat4-testsuite-defs.sh \
  rat4-testsuite-init.sh \
  halt.f

## vim: ft=automake noet sw=4 ts=4
